Fixes matches url function to use this in the correct context.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nicholas-core",
-  "version": "1.0.3",
+  "name": "nicholas-router",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
